9/14html5の書式に変更

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>	
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta charset="utf-8">
 <title>森の工房 [Forest Studio] - 森の工房について</title>
-<style type="text/css">
+<style>
 
 a	{color: #017acd}
 
@@ -85,9 +85,12 @@ div#footer	{color: #ffffff;
 	padding-top: 8px;
 	padding-bottom: 8px}
 
-address	{font-size: 0.75em;
+small {
+	font-size: 0.75em;
 	font-style: normal;
-	text-align: center}
+	text-align: center;
+	display: block;
+}
 
 
 /* 画像の配置 */
@@ -153,7 +156,7 @@ img.photo-even	{float: left;
 
 <!-- フッター -->
 <div id="footer">
-<address>Copyright (C) Green Leaf, All rights reserved.</address>
+<small>Copyright (C) Green Leaf, All rights reserved.</small>
 </div>
 
 </div>
