9/16チャプター3の修正追加

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header#pageheader h1   {
 	    margin: 0 0 0 20px
 }
 
-header#pageheader p    {
+header#pageheader h2    {
 	    color: #ffffff;
 	    font-size: 0.75em;
 	    margin: 0 0 98px 20px
@@ -125,6 +125,7 @@ img.photo-even	{float: left;
 <![endif]-->
 
 </head>
+<body>
 
 <!-- コンテナ -->
 <div id="container">
