--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 <head>
 <meta charset="utf-8">
 <title>森の工房 [Forest Studio] - 森の工房について</title>
+<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+
 <style>
+body {font-family: 'メイリオ', 'hiragino kaku Gothic Pro',sans-serif;}
 
 a	{color: #017acd}
 
 /* コンテナ */
-div#container	{width: 760px;
+div#container	{width: 900px;
 	margin-left: auto;
 	margin-right: auto}
 
 /* ヘッダー */
 
 header#pageheader	  {
-	    background-color: #017acd;
-	    background-image: url(sky.jpg);
-	    padding: 28px 0 0
+	    background: none;
+	    padding: 15px 0 0
 }
 
 header#pageheader h1   {
-	    margin: 0 0 0 20px
+	    margin: 0;
+	    float: left;
+	    font-size: 40px;
+	    font-weight: normal;
+	    font-family: 'Righteous', cursive;
 }
 
 header#pageheader h2    {
-	    color: #ffffff;
+	    color: #666666;
 	    font-size: 0.75em;
-	    margin: 0 0 98px 20px
+	    margin: 0;
+	    padding-top: 20px;
+	    text-align: right;
+	    font-weight: normal;
 }
+nav    {clear: both;}
 
 /* メニュー */
 
@@ -64,30 +74,31 @@ nav ul li a:hover	{
 
 /* コンテンツ */
 
-article	    {width: 564px;
+article	    {width: auto;
 	        margin-left: auto;
 	        margin-right: auto}
 
-article header h1	{background-color: #014471;
-			background-image: url(bar-darkblue.png);
-			background-repeat: no-repeat;
-			font-size: 1em;
-			color: #ffffff;
+article header h1 {
+	        background: none;
+			font-size: 28px;
+			color: #000000;
 			line-height: 45px;
-			padding-left: 12px;
-			margin-bottom: 0}
-
-article section h1	{background-color: #ffffff;
-			background-image: url(maru-skyblue.png);
-			background-repeat: no-repeat;
-			background-position: 0px 2px;
-			font-size: 0.875em;
-			line-height: 22px;
-			padding-left: 26px;
-			margin-top: 30px;
+			padding-left: 0;
 			margin-bottom: 0;
-			margin-left: 12px;
-			margin-right: 12px}
+			font-weight: normal;
+}
+article section {clear:both;}
+
+article section h1	{
+            background: none;
+			font-size: 24px;
+			font-weight: normal;
+			line-height: 22px;
+			padding-left: 0;
+			margin-top: 30px;
+			margin-bottom: 20px;
+			margin-left: 0;
+			margin-right: 0;}
 
 article p	{font-size: 0.75em;
 			line-height: 1.6;
@@ -100,7 +111,10 @@ footer	    {color: #ffffff;
 			background-color: #005087;
 			margin-top: 25px;
 			padding-top: 8px;
-			padding-bottom: 8px}
+			padding-bottom: 8px;
+			clear:both;
+
+}
 
 small       {font-size: 0.75em;
 			font-style: normal;
@@ -109,7 +123,10 @@ small       {font-size: 0.75em;
 
 
 /* 画像の配置 */
-img.photo-odd	{float: right;
+figure  {margin: 0;}
+
+article section:nth-of-type(odd) figure
+	{float: right;
 	margin-left: 15px;
 	margin-bottom: 15px}
 
@@ -134,18 +151,20 @@ img.photo-even	{float: left;
 <!-- ヘッダー -->
 
 <header id="pageheader">
-<h1><img src="logo.gif" alt="Green Leaf" /></h1>
-<p>生活を楽しくする情報をもっと身近にお届けします</p>
+
+<h1>Green Leaf</h1>
+<h2>生活を楽しくする情報をもっと身近にお届けします</h2>
+
 
 <!-- メニュー -->
 <nav>
-    <ul>
+<ul>
 	<li><a href="index.html">トップ</a></li>
 	<li><a href="about.html">森の工房について</a></li>
 	<li><a href="event.html">季節のイベント</a></li>
 	<li><a href="contact.html">お問い合わせ</a></li>
 	<li><a href="http://blog.xxx.xxx/">ブログ</a></li>
-    </ul>
+</ul>
 </nav>
 </header>
 
@@ -161,8 +180,9 @@ img.photo-even	{float: left;
 <section>
 <h1>森の中にある工房</h1>
 
-<p><img src="photo01.jpg" alt="森の中の様子" width="250" height="165" class="photo-odd" />
-森の工房は、木々のあふれる森の中にあります。森の入口から細い小道を通り、森の奥に進んでください。しばらくすると、森の中にある小さな丘に出てきます。その丘の上にある木造の建物が「森の工房」です。</p>
+<figure><img src="photo01.jpg" alt="森の中の様子" width="250" height="165" /></figure>
+
+<p>森の工房は、木々のあふれる森の中にあります。森の入口から細い小道を通り、森の奥に進んでください。しばらくすると、森の中にある小さな丘に出てきます。その丘の上にある木造の建物が「森の工房」です。</p>
 
 <p>この丘はちょうど森の中央に位置しており、森の中を散歩したり、自然の中で遊んだりするときにも、ちょうどいい拠点になります。森全体を見渡すことも可能で、夜は満点の星空を満喫できます。</p>
 </section>
@@ -170,16 +190,17 @@ img.photo-even	{float: left;
 <section>
 <h1>四季を楽しむことができる場所</h1>
 
-<p><img src="photo02.jpg" alt="冬の風景" width="250" height="165" class="photo-even" />
-森の工房では、春、夏、秋、冬と、四季折々の自然を楽しむことができます。<br />
+<figure><img src="photo02.jpg" alt="冬の風景" width="250" height="165" /></figure>
+
+<p>森の工房では、春、夏、秋、冬と、四季折々の自然を楽しむことができます。<br />
 春には、雪解け水の中から芽を出す新しい命や、新緑の鮮やかな緑。夏には、緑濃く茂った木々の間を吹き抜けるさわやかな風に、川の清流での水遊び。秋には、森全体が赤や黄色に染まり、色鮮やかな紅葉に包まれます。木々の葉が落ち、冬になると、ここは雪に覆われて一面の銀世界になります。</p>
 </section>
 
 <section>
 <h1>工房のまわりにいる動物たち</h1>
 
-<p><img src="photo03.jpg" alt="キツネさん" width="250" height="165" class="photo-odd" itemprop="image" />
-工房のまわりにはいろいろな動物たちが棲んでいます。キツネ、タヌキ、イタチ、ウサギ、リス、シカ、イノシシ…。森の中で出会うこともあれば、ひょこっと工房に顔を出すこともあります。土や雪の上に残った足跡から、正体を探るのも楽しみです。</p>
+<figure><img src="photo03.jpg" alt="キツネさん" width="250" height="165" itemprop="image" /></figure>
+<p>工房のまわりにはいろいろな動物たちが棲んでいます。キツネ、タヌキ、イタチ、ウサギ、リス、シカ、イノシシ…。森の中で出会うこともあれば、ひょこっと工房に顔を出すこともあります。土や雪の上に残った足跡から、正体を探るのも楽しみです。</p>
 
 <p>ただし、森の工房では彼らに餌をやることはしていません。自然にあるがままの姿で、いっしょに生活していきたいと考えているからです。彼らに出会ったときには、びっくりさせないように遠くからそっと眺めてあげてください。</p>
 </section>
