--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>	
+<!DOCTYPE html> 
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,14 +6,24 @@
 <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 
 <style>
-body {font-family: 'メイリオ', 'hiragino kaku Gothic Pro',sans-serif;}
+body {font-family: 'メイリオ', 'hiragino kaku Gothic Pro',sans-serif;
+    background-color: #e5e5e5;
+    margin: 0;}
 
 a	{color: #017acd}
 
 /* コンテナ */
 div#container	{width: 900px;
 	margin-left: auto;
-	margin-right: auto}
+	margin-right: auto;
+    background-color: #ffffff;
+    padding: 0 40px;
+    -webkit-box-shadow: 0px 0px 50px #bbbbbb;
+    box-shadow: 0px 0px 50px #bbbbbb;
+    background-image: url(circle.png), url(circle-yellow.png);
+    background-repeat: no-repeat;
+    background-position: 15px 420px, 90px 500px;
+    background-size: 94px 94px;}
 
 /* ヘッダー */
 
@@ -45,12 +55,17 @@ nav    {clear: both;}
 nav ul	{
 	font-size: 0.75em;
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     margin-left: 0;
     padding-left: 0;
     height: 30px;
-    background-color: #005087;
-}
+    background-color: #333333;
+    border-radius: 5px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#777777), color-stop(50%, #444444), color-stop(50%, #333333), to(#555555));
+    background: -webkit-linear-gradient(#777777 0%, #444444 50%, #333333 51%, #555555 100%);
+    background: -moz-linear-gradient(#777777 0%, #444444 50%, #333333 51%, #555555 100%);
+    background: -o-linear-gradient(#777777 0%, #444444 50%, #333333 51%, #555555 100%);
+    background: -ms-linear-gradient(#777777 0%, #444444 50%, #333333 51%, #555555 100%);}
 
 nav ul li   {
 	list-style-type: none;
@@ -64,13 +79,13 @@ nav ul li a	  {
    	text-decoration: none;
    	text-align: center;
    	color: #ffffff;
-   	background-color: #005087;
    	border-right: solid 1px #ffffff;
 }
 
 nav ul li a:hover	{
-	background-color: #017acd;
-}
+	background-color: #017acd;}
+nav ul li:first-of-type a:hover
+    {border-radius: 5px 0 0 5px;}
 
 /* コンテンツ */
 
@@ -78,16 +93,41 @@ article	    {width: auto;
 	        margin-left: auto;
 	        margin-right: auto}
 
+article header {border: solid 1px #aaaaaa;
+            margin: 20px 0 10px;
+            padding: 18px;
+            border-radius: 5px;
+            -webkit-box-shadow: 0px 2px 3px #cccccc;
+            box-shadow: 0px 2px 3px #cccccc;}
+
 article header h1 {
 	        background: none;
 			font-size: 28px;
 			color: #000000;
 			line-height: 45px;
 			padding-left: 0;
-			margin-bottom: 0;
+			margin: 0;
 			font-weight: normal;
-}
-article section {clear:both;}
+            float: left;}
+
+article header p {font-size: 16px;
+			color: #444444;
+			margin-left: 300px;}
+
+article section {clear:both;
+			border: solid 1px #aaaaaa;
+			margin: 20px 0 10px;
+			padding: 18px;
+			border-radius: 5px;
+			overflow: hidden;
+			background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dfdfdf));
+			background: -webkit-linear-gradient(#ffffff 0%, #dfdfdf 100%);
+		    background: -moz-linear-gradient(#ffffff 0%, #dfdfdf 100%);
+		    background: -o-linear-gradient(#ffffff 0%, #dfdfdf 100%);
+		    background: -ms-linear-gradient(#ffffff 0%, #dfdfdf 100%);
+            -webkit-box-shadow: 0px 2px 3px #cccccc,
+            0px 0px 4px 3px #ffffff inset;
+	        box-shadow: 0px 0px 4px 3px #ffffff inset;}
 
 article section h1	{
             background: none;
@@ -95,7 +135,7 @@ article section h1	{
 			font-weight: normal;
 			line-height: 22px;
 			padding-left: 0;
-			margin-top: 30px;
+			margin-top: 0;
 			margin-bottom: 20px;
 			margin-left: 0;
 			margin-right: 0;}
@@ -103,8 +143,8 @@ article section h1	{
 article p	{font-size: 0.75em;
 			line-height: 1.6;
 			margin-top: 10px;
-			margin-left: 12px;
-			margin-right: 12px}
+			margin-left: 0;
+			margin-right: 0;}
 
 /* フッター */
 footer	    {color: #ffffff;
@@ -128,19 +168,43 @@ figure  {margin: 0;}
 article section:nth-of-type(odd) figure
 	{float: right;
 	margin-left: 15px;
-	margin-bottom: 15px}
+	margin-bottom: 0;}
 
-img.photo-even	{float: left;
+article section:nth-of-type(even) figure
+    {float: left;
 	margin-right: 15px;
-	margin-bottom: 15px}
+	margin-bottom: 0;}
+
+article section figcaption 
+    {color: #666666;
+	font-size: 10px;
+	display: block;}
+
+article section:nth-of-type(odd) figcaption{text-align: right;}
 
 </style>
 
 
 <!--[if it IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
 
+<style>
+article section figure {float: right;
+	  margin-left: 15px;
+	  margin-bottom: 15px;}
+
+<!--[if lt IE 10]>
+<style>
+nav ul {filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#777777',endColorstr='#333333');
+
+   -ms-filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#777777',endColorstr='#333333');}
+
+article section
+	{filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff',endColorstr='#dfdfdf');
+
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff',endColorstr='#dfdfdf')"}
+</style>
+<![endif]-->
 </head>
 <body>
 
@@ -151,10 +215,10 @@ img.photo-even	{float: left;
 <!-- ヘッダー -->
 
 <header id="pageheader">
-
+<hgroup>
 <h1>Green Leaf</h1>
 <h2>生活を楽しくする情報をもっと身近にお届けします</h2>
-
+</hgroup>
 
 <!-- メニュー -->
 <nav>
@@ -166,6 +230,8 @@ img.photo-even	{float: left;
 	<li><a href="http://blog.xxx.xxx/">ブログ</a></li>
 </ul>
 </nav>
+
+<img src="header.jpg" alt="">
 </header>
 
 <!-- コンテンツ -->
@@ -180,7 +246,9 @@ img.photo-even	{float: left;
 <section>
 <h1>森の中にある工房</h1>
 
-<figure><img src="photo01.jpg" alt="森の中の様子" width="250" height="165" /></figure>
+<figure><img src="photo01.jpg" alt="森の中の様子" width="250" height="165" />
+<figcaption>工房へ続く森の中の道</figcaption>
+</figure>
 
 <p>森の工房は、木々のあふれる森の中にあります。森の入口から細い小道を通り、森の奥に進んでください。しばらくすると、森の中にある小さな丘に出てきます。その丘の上にある木造の建物が「森の工房」です。</p>
 
@@ -190,7 +258,9 @@ img.photo-even	{float: left;
 <section>
 <h1>四季を楽しむことができる場所</h1>
 
-<figure><img src="photo02.jpg" alt="冬の風景" width="250" height="165" /></figure>
+<figure><img src="photo02.jpg" alt="冬の風景" width="250" height="165" />
+<figcaption>季節ごとに変わる景色</figcaption>
+</figure>
 
 <p>森の工房では、春、夏、秋、冬と、四季折々の自然を楽しむことができます。<br />
 春には、雪解け水の中から芽を出す新しい命や、新緑の鮮やかな緑。夏には、緑濃く茂った木々の間を吹き抜けるさわやかな風に、川の清流での水遊び。秋には、森全体が赤や黄色に染まり、色鮮やかな紅葉に包まれます。木々の葉が落ち、冬になると、ここは雪に覆われて一面の銀世界になります。</p>
@@ -199,7 +269,9 @@ img.photo-even	{float: left;
 <section>
 <h1>工房のまわりにいる動物たち</h1>
 
-<figure><img src="photo03.jpg" alt="キツネさん" width="250" height="165" itemprop="image" /></figure>
+<figure><img src="photo03.jpg" alt="キツネさん" width="250" height="165" itemprop="image" />
+<figcaption>工房の近くに姿を見せたキツネ</figcaption>
+</figure>
 <p>工房のまわりにはいろいろな動物たちが棲んでいます。キツネ、タヌキ、イタチ、ウサギ、リス、シカ、イノシシ…。森の中で出会うこともあれば、ひょこっと工房に顔を出すこともあります。土や雪の上に残った足跡から、正体を探るのも楽しみです。</p>
 
 <p>ただし、森の工房では彼らに餌をやることはしていません。自然にあるがままの姿で、いっしょに生活していきたいと考えているからです。彼らに出会ったときには、びっくりさせないように遠くからそっと眺めてあげてください。</p>
