--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@ a	{color: #017acd}
 div#container	{width: 900px;
 	margin-left: auto;
 	margin-right: auto;
-    background-color: #ffffff;
-    padding: 0 40px;
-    -webkit-box-shadow: 0px 0px 50px #bbbbbb;
-    box-shadow: 0px 0px 50px #bbbbbb;
-    background-image: url(circle.png), url(circle-yellow.png);
-    background-repeat: no-repeat;
-    background-position: 15px 420px, 90px 500px;
-    background-size: 94px 94px;}
+	background-color: #ffffff;
+	padding: 0 40px;
+	-webkit-box-shadow: 0px 0px 50px #bbbbbb;
+	box-shadow: 0px 0px 50px #bbbbbb;
+	background-image: url(circle.png), url(circle-yellow.png);
+	background-repeat: no-repeat;
+	background-position: 15px 420px, 90px 500px;
+    background-size: 94px 94px, 30px 30px;
+    position: relative;
+    overflow: hidden;}
 
 /* ヘッダー */
 
@@ -79,11 +81,11 @@ nav ul li a	  {
    	text-decoration: none;
    	text-align: center;
    	color: #ffffff;
-   	border-right: solid 1px #ffffff;
-}
+   	border-right: solid 1px rgba(255,255,255,0.2);}
 
 nav ul li a:hover	{
-	background-color: #017acd;}
+	background-color: rgba(1,122,205,0.3);}
+
 nav ul li:first-of-type a:hover
     {border-radius: 5px 0 0 5px;}
 
@@ -93,13 +95,13 @@ article	    {width: auto;
 	        margin-left: auto;
 	        margin-right: auto}
 
-article header {border: solid 1px #aaaaaa;
-            margin: 20px 0 10px;
-            padding: 18px;
-            border-radius: 5px;
-            -webkit-box-shadow: 0px 2px 3px #cccccc;
-            box-shadow: 0px 2px 3px #cccccc;}
-
+article header  {border: solid 1px #aaaaaa;
+	margin: 20px 0 10px;
+	padding: 18px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0px 2px 3px #cccccc, 0px 0px 4px 3px #ffffff inset;
+	box-shadow: 0px 2px 3px #cccccc, 0px 0px 4px 3px #ffffff inset;
+	background-color: rgba(255,255,255,0.5)}
 article header h1 {
 	        background: none;
 			font-size: 28px;
@@ -147,19 +149,34 @@ article p	{font-size: 0.75em;
 			margin-right: 0;}
 
 /* フッター */
-footer	    {color: #ffffff;
-			background-color: #005087;
+footer	    {color: #888888;
 			margin-top: 25px;
 			padding-top: 8px;
 			padding-bottom: 8px;
 			clear:both;
-
-}
+			border-top: solid 1px #aaaaaa;}
 
 small       {font-size: 0.75em;
 			font-style: normal;
-			text-align: center;
+			text-align: left;
 			display: block;}
+
+small::before {content: 'GREEN LEAF';
+			display: block;
+			width: 200px;
+			padding: 10px;
+			background-color: #880000;
+			color: #ffffff;
+			font-family: 'Righteous',cursive;
+			font-size: 16px;
+			text-align: center;
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			-webkit-transform: rotate(-45deg) translate(62px, 20px);
+		    -moz-transform: rotate(-45deg) translate(62px, 20px);
+		    -o-transform: rotate(-45deg) translate(62px, 20px);
+		    -ms-transform: rotate(-45deg) translate(62px, 20px);}
 
 
 /* 画像の配置 */
@@ -182,6 +199,33 @@ article section figcaption
 
 article section:nth-of-type(odd) figcaption{text-align: right;}
 
+/* 3段組み */
+article div[itemprop="articleBody"] {display: -webkit-box;
+	display: -moz-box;
+	display: -ms-box;}
+
+article section {width: 288px;
+	margin-right: 18px;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	overflow: visible;}
+
+article section	h1 {height: 48px;
+line-height: 1.2;}
+
+article section:nth-of-type(1n) figure{float: none;
+margin: 0;}
+
+article section:nth-of-type(1n) figcaption{text-align: center;margin-bottom: 15px;}
+
+/* 3段組み IE8～9 & Opera */
+article section {color: none;
+	float: left;
+	position: relative;}
+article section + section + section {margin-right: 0;}
+
+
 </style>
 
 
@@ -192,6 +236,12 @@ article section:nth-of-type(odd) figcaption{text-align: right;}
 article section figure {float: right;
 	  margin-left: 15px;
 	  margin-bottom: 15px;}
+
+nav ul li a {border-right: solid 1px #ffffff}
+
+nav ul li a:hover {background-color: #017acd}
+</style>
+<![endif]-->
 
 <!--[if lt IE 10]>
 <style>
@@ -205,8 +255,17 @@ article section
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff',endColorstr='#dfdfdf')"}
 </style>
 <![endif]-->
+<!--[if lt IE 8]>
+<style>
+article section {widht: 250px;}
+
+article section figure {margin-left:0;}
+
+</style>
+<![endif]-->
 </head>
 <body>
+
 
 <!-- コンテナ -->
 <div id="container">
