9/18チャプター6の修正

--- a/index.html
+++ b/index.html
@@ -301,6 +301,38 @@ article section figure {float: right;
 nav ul li a {border-right: solid 1px #ffffff}
 
 nav ul li a:hover {background-color: #017acd}
+
+/* ３段組み */
+article div[itemprop="articleBody"]
+	{display: -webkit-box;
+	display: -moz-box;
+	display: -ms-box}
+
+article section	{width: 288px;
+	margin-right: 18px;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	overflow: visible}
+
+article section h1	{height: 48px;
+	line-height: 1.2}
+
+article section:nth-of-type(1n) figure
+	{float: none;
+	margin: 0}
+
+article section:nth-of-type(1n) figcaption
+	{text-align: center;
+	margin-bottom: 15px}
+
+/* ３段組み IE8～9 & Opera */
+article section	{clear: none;
+	float: left;
+	position: relative}
+
+article section + section + section	{margin-right: 0}
+
 </style>
 <![endif]-->
 
